--- a/edit/index1.html
+++ b/edit/index1.html
@@ -50,7 +50,7 @@
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
-	    <li><a href="edit/edit.html"><img class="edit" src="images/edit.png" alt="" /></a></li>
+	    <li><a href="edit.html"><img class="edit" src="images/edit.png" alt="" /></a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
